--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -3,12 +3,12 @@ HUGO_EXECUTABLE := hugo
 THEME_DIRECTORY := themes/ananke
 
 build:
-	@$(HUGO_EXECUTABLE)
+	$(HUGO_EXECUTABLE)
 
 clean:
-	@rm -Rf dist/*
+	rm -Rf dist/*
 
 post:
-	@$(HUGO_EXECUTABLE) new posts/$(POST_NAME).md
-	@sed -i 's/title: .*/title: $(POST_TITLE)/' content/posts/$(POST_NAME).md
+	$(HUGO_EXECUTABLE) new posts/$(POST_NAME).md
+	sed -i 's/title: .*/title: $(POST_TITLE)/' content/posts/$(POST_NAME).md
 
