--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -7,6 +7,7 @@ clean:
 	rm -Rf dist/*
 
 post:
-	hugo new posts/$(POST_NAME).md
-	sed -i 's|title:.*|title: "$(POST_TITLE)"|' content/posts/$(POST_NAME).md
+	$(HUGO_EXECUTABLE) new posts/$(POST_NAME).md
+	sed -i 's/title:.*/title: $(POST_TITLE)/' content/posts/$(POST_NAME).md
+	sed -i 's/draft: true/draft: false/' content/posts/$(POST_NAME).md
 
