--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -7,5 +7,5 @@ clean:
 	rm -Rf dist/*
 
 post:
-	$(HUGO_EXECUTABLE) new posts/$(POST_NAME).md
+	hugo new posts/$(POST_NAME).md
 	sed -i 's/title:.*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
