--- a/module1_task2/Makefile
+++ b/module1_task2/Makefile
@@ -5,7 +5,7 @@ HUGO_EXECUTABLE := hugo
 help: ## command help
 	cat Makefile | grep '##' | tr -d '##' | head -n -1
 
-build:
+build: ## build files
 	$(HUGO_EXECUTABLE)
 
 clean: ## remove all file force ignore nonexistent files
