fix makefile documentation

--- a/module2_task0/Makefile
+++ b/module2_task0/Makefile
@@ -1,4 +1,4 @@
-help:
+help:## Help
 	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 build:## Build the application
