--- a/module2_task1/Makefile
+++ b/module2_task1/Makefile
@@ -2,9 +2,8 @@ help:## Help
 	-fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 build:## Build the application
-	-make lint || exit -1
 	-go mod init github.com/TessieV/awesome-api
-	-go build
+	-make lint && go build
 
 run:## Run
 	-./awesome-api >./awesome-api.log 2>&1 &
@@ -21,4 +20,4 @@ test:## Test
 	curl http://localhost:9999/health
 
 lint: ## Test lint on the files
-	golangci-lint run
+	-golangci-lint run
