--- a/module2_task1/Makefile
+++ b/module2_task1/Makefile
@@ -1,24 +1,22 @@
-help: ## Show command help
-	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/\##//'
+help:## Help
+	-fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
-# > (redirige STDOUT) /dev/null(chemin de redirection) 2>&1 (2: STDERR redirection vers là ou est &1: STDOUT)
-# build execute only if make lint success : &&
-build: ## Compile source code of the application to a binary name awesome.api
-	@go get github.com/gorilla/mux
-	@make lint >/dev/null 2>&1 && go build || exit -1
+build:## Build the application
+	-make lint && go build
 
-run: ## Run the application in background and write logs in awesome-api.log
-	@./awesome-api >./awesome-api.log 2>&1 &
+run:## Run
+	-./awesome-api >./awesome-api.log 2>&1 &
 
-stop: ## Stop the application
-	@kill "$(shell pgrep awesome-api)" 2>/dev/null &
+stop:## Stop
+	-kill "$(shell pgrep awesome-api)"
 
-clean: ## Stop the application and delete awesome-api and awesome.log
-	@make stop && rm -rf awesome-api awesome-api.log
+clean:## Clean
+	-make stop
+	-rm -rf awesome-api
 
-test: ## Test to ensure expected beahaviour
-	@curl http://localhost:9999
-	@curl http://localhost:9999/health
+test:## Test
+	curl http://localhost:9999
+	curl http://localhost:9999/health
 
 lint: ## Test lint on the files
-	@golangci-lint run
+	golangci-lint run
