--- a/module2_task1/Makefile
+++ b/module2_task1/Makefile
@@ -2,10 +2,10 @@ help:## Help
 	-fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 build:## Build the application
-	-make lint && go build
+	make lint && go build || exit -1
 
 run:## Run
-	-./awesome-api >./awesome-api.log 2>&1 &
+	./awesome-api >./awesome-api.log 2>&1 &
 
 stop:## Stop
 	-kill "$(shell pgrep awesome-api)"
