--- a/module2_task3/Makefile
+++ b/module2_task3/Makefile
@@ -27,3 +27,7 @@ unit-tests: ## Test of unit test
 integration-tests: ## Test integration-tests
 	go test -v -coverprofile=coverage-integration.out
 
+coverage: ## Generate test
+	make unit-tests
+	make integration-tests
+	go tool cover -html=coverage-units.out -html=coverage-integrations.out
