--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "module1_task4/themes/ananke"]
 	path = module1_task4/themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+[submodule "module2_task4/themes/ananke"]
+	path = module2_task4/themes/ananke
+	url = https://github.com/theNewDynamic/gohugo-theme-ananke
