--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -6,7 +6,8 @@ help: ## command help
 	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 build: ## build files
-	$(HUGO_EXECUTABLE)
+	-make check
+	-$(HUGO_EXECUTABLE)
 
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf dist/*
@@ -20,5 +21,5 @@ check: ## check
 	markdown-link-check ./content/posts/*.md
 
 validate: ## validate index
-	./w3c_validator.py ./dist/index.html
+	-./w3c_validator.py ./dist/index.html
 
