--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -17,8 +17,8 @@ post: ## create new post
 	sed -i 's/title:.*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 
 check: ## check
-	markdownlint -f ./content/posts/*.md
-	markdown-link-check ./content/posts/*.md
+	-markdownlint -f ./content/posts/*.md
+	-markdown-link-check ./content/posts/*.md
 
 validate: ## validate index
 	-./w3c_validator.py ./dist/index.html
