--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -7,7 +7,7 @@ help: ## command help
 	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 build: ## build files
-	-make check && $(HUGO_EXECUTABLE) -c $(DESTDIR)
+	-make check && $(HUGO_EXECUTABLE)
 
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf dist/*
