--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -7,11 +7,11 @@ help: ## command help
 	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 build: ## build files
-	curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
-	apt install ./hugo.deb
-	rm hugo.deb
-	make check
-	$(HUGO_EXECUTABLE)
+	-curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
+	-apt install ./hugo.deb
+	-rm hugo.deb
+	-make check
+	-$(HUGO_EXECUTABLE)
 
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf dist/*
