remove - in the check

--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -13,8 +13,8 @@ build: ## build files
 	-curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
 	-apt install ./hugo.deb
 	-rm hugo.deb
-	-make check
-	-hugo -c dist/*
+	markdownlint -f ./content/posts/*.md && markdown-link-check ./content/posts/*.md
+
 
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf dist/*
