--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -7,14 +7,14 @@ help: ## command help
 	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 check: ## check
-	markdownlint ./content/posts/*.md
-	markdown-link-check ./content/posts/*.md
+	markdownlint -f ./content/posts/*.md && markdown-link-check ./content/posts/*.md
 
 build: ## build files
 	-curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
 	-apt install ./hugo.deb
 	-rm hugo.deb
-	make check && hugo
+	-make check
+	-hugo -c dist/*
 
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf dist/*
@@ -26,4 +26,3 @@ post: ## create new post
 
 validate: ## validate index
 	-./w3c_validator.py ./dist/index.html
-
