--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -13,7 +13,7 @@ build: ## build files
 	-curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
 	-apt install ./hugo.deb
 	-rm hugo.deb
-	-make check
+	$(MAKE) check  # add this line to make check a dependency of build
 	-hugo -c dist/*
 
 clean: ## remove all file force ignore nonexistent files
