--- a/module2_task4/Makefile
+++ b/module2_task4/Makefile
@@ -11,7 +11,7 @@ build: check ## build files
 	curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
 	apt install ./hugo.deb
 	rm hugo.deb
-	hugo -c $(DESTDIR)/*
+	make check hugo -c $(DESTDIR)/*
 
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf $(DESTDIR)/*
@@ -21,4 +21,4 @@ post: ## create new post
 	sed -i 's/title:.*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 
 validate: ## validate index
-	./w3c_validator.py $(DESTDIR)/index.html
+	-./w3c_validator.py $(DESTDIR)/index.html
