--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "module2_task4/themes/ananke"]
 	path = module2_task4/themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+[submodule "module2_task5/themes/ananke"]
+	path = module2_task5/themes/ananke
+	url = https://github.com/theNewDynamic/gohugo-theme-ananke
