--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "module2_task5/themes/ananke"]
 	path = module2_task5/themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+[submodule "module3_task0/themes/ananke"]
+	path = module3_task0/themes/ananke
+	url = https://github.com/theNewDynamic/gohugo-theme-ananke
