--- a/module3_task0/Makefile
+++ b/module3_task0/Makefile
@@ -1,25 +1,24 @@
-help:## Help
-	-fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
+DESTDIR=dist
+HUGO_EXECUTABLE := hugo
 
-build:## Build the application
-	make lint && go build || exit -1
+help: ## command help
+	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
-run:## Run
-	./awesome-api >./awesome-api.log 2>&1 &
+check: ## check
+	markdownlint -f ./content/posts/*.md && markdown-link-check ./content/posts/*.md
 
-stop:## Stop
-	-kill "$(shell pgrep awesome-api)"
+build: ## build files
+	curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
+	apt install ./hugo.deb
+	rm hugo.deb
+	make check && hugo -c $(DESTDIR)/*
 
-clean:## Clean
-	-make stop
-	-rm -rf awesome-api
+clean: ## remove all file force ignore nonexistent files
+	rm -Rf $(DESTDIR)/*
 
-test:## Test
-	curl http://localhost:9999
-	curl http://localhost:9999/health
+post: ## create new post
+	$(HUGO_EXECUTABLE) new posts/$(POST_NAME).md
+	sed -i 's/title:.*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 
-lint: ## Test lint on the files
-	golangci-lint run
-
-unit-tests: ## Test of unit test
-	go test -v -short -coverprofile=coverage-units.out
+validate: ## validate index
+	./w3c_validator.py ./dist/index.html || true
