--- a/module3_task0/.github/workflows/module3_task0.yml
+++ b/module3_task0/.github/workflows/module3_task0.yml
@@ -1,21 +1,16 @@
-name: Code Push and Daily Workflow
+name: module3_task0
 
 on:
   push:
-    branches:
-      - main
-
   schedule:
     - cron: "0 0 * * *"
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Execute make help
-        run: |
-          make help
+      - uses: actions/checkout@v3
+        with:
+          repository: ''
+      - name: Display make help
+        run: cd module3_task0/ && make help
