--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -1,7 +1,9 @@
 name: module3_task0
 
-on:
+"on":
   push:
+    branches:
+      - main
   schedule:
     - cron: "0 0 * * *"
 
@@ -10,7 +12,5 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-        with:
-          repository: ''
       - name: Display make help
         run: cd module3_task0/ && make help
