--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "module3_task0/themes/ananke"]
 	path = module3_task0/themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+[submodule "module3_task1/themes/ananke"]
+	path = module3_task1/themes/ananke
+	url = https://github.com/theNewDynamic/gohugo-theme-ananke
