--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -1,24 +1,36 @@
+.POSIX:
 DESTDIR=dist
-HUGO_EXECUTABLE := hugo
+HUGO_VERSION=0.84.0
 
-help: ## command help
-	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
+.PHONY: build
+build:		## update Hugo version & Build a new website in the directory /dist
+	@hugo -c $(DESTDIR)
 
-check: ## check
-	markdownlint -f ./content/posts/*.md && markdown-link-check ./content/posts/*.md
-
-build: ## build files
-	curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
-	apt install ./hugo.deb
-	rm hugo.deb
-	make check && hugo -c $(DESTDIR)/*
-
-clean: ## remove all file force ignore nonexistent files
+.PHONY: clean
+clean:		## Removes all files from the directory /dist
 	rm -Rf $(DESTDIR)/*
 
-post: ## create new post
-	$(HUGO_EXECUTABLE) new posts/$(POST_NAME).md
+.PHONY: post
+post:		## Post a new blog post
+	hugo new posts/$(POST_NAME).md
 	sed -i 's/title:.*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 
-validate: ## validate index
-	./w3c_validator.py ./dist/index.html || true
+.PHONY: help
+help: 		## Show this help
+	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
+
+.PHONY: check
+check: 		## check the markdown's lint
+	@markdownlint -f ./content/posts/*.md && markdown-link-check ./content/posts/*.md
+
+.PHONY: validate
+validate:  	## validate W3C
+	@python3 /opt/W3C-Validator/w3c_validator.py ./dist/index.html
+
+.PHONY: run
+run: 		## runs the api and logs it
+	./awesome-api > ./awesome-api.log 2>&1 &
+
+.PHONY: stop
+stop: 		## kills the process with PID name
+	pkill awesome-api
