--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -1,28 +1,28 @@
----
 name: module3_task1
-on:   # yamllint disable-line rule:truthy
+
+on:
   push:
+    branches:
+      - main
   schedule:
-    - cron: '0 0 * * *'   # runs every day at 00:00
+    - cron: "0 0 * * *"
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          repository: ''
 
-      - name: run setup.sh
-        run: ./module3_task1/setup.sh
-      - name: Display help
-        run: cd module3_task1/ && make help
-      - name: build
-        run: cd module3_task1/ && make build
-      - name: run
-        run: cd module3_task1/ && make run
-      - name: post
-        run: cd module3_task1/ && make \
-             POST_NAME=who-are-we POST_TITLE="Who are we" post
-      - name: clean
-        run: cd module3_task1/ && make clean
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Display hugo
+        run: cd ./module3_task1 && ./setup.sh
+
+      - name: Makefile build cmd
+        run: |
+          make help
+          make build
+          make run
+          make stop
+          make clean
+        working-directory: module3_task1
