--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -8,10 +8,11 @@ check: ## check
 	markdownlint -f ./content/posts/*.md && markdown-link-check ./content/posts/*.md
 
 build: ## build files
-	curl -L https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_extended_0.84.0_Linux-64bit.deb -o hugo.deb
-	apt install ./hugo.deb
-	rm hugo.deb
-	make check && hugo -c $(DESTDIR)/*
+	curl -L https://github.com/gohugoio/hugo/releases/download/v0.109.0/hugo_extended_0.109.0_Linux-64bit.tar.gz -o hugo.tar.gz
+	tar -xvf hugo.tar.gz hugo
+	rm hugo.tar.gz
+	mv hugo $(DESTDIR)/hugo
+	make check && $(DESTDIR)/hugo -c $(DESTDIR)/*
 
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf $(DESTDIR)/*
