--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Display hugo
-        run: cd ./module3_task1/setup.sh
+        run: cd ./module3_task1 && ./setup.sh
 
       - name: Makefile build cmd
         run: |
