--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -4,9 +4,6 @@ HUGO_EXECUTABLE := hugo
 help: ## command help
 	fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
-check: ## check
-	markdownlint -f ./content/posts/*.md && markdown-link-check ./content/posts/*.md
-
 build: ## build files
 	curl -L https://github.com/gohugoio/hugo/releases/download/v0.109.0/hugo_extended_0.109.0_Linux-64bit.tar.gz -o hugo.tar.gz
 	tar -xvf hugo.tar.gz hugo
@@ -17,5 +14,6 @@ build: ## build files
 clean: ## remove all file force ignore nonexistent files
 	rm -Rf $(DESTDIR)/*
 
-validate: ## validate index
-	./w3c_validator.py ./dist/index.html || true
+post: ## create new post with POST_NAME ans POST_TITLE given
+	hugo new posts/$(POST_NAME).md
+	sed -i 's|title:.*|title: "$(POST_TITLE)"|' content/posts/$(POST_NAME).md
