--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -6,7 +6,7 @@ name: module3_task1
     - cron: "0 0 * * *"
 
 jobs:
-  build:
+  builds:
     name: update
     runs-on: ubuntu-22.04
 
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: installation Hugo with script
-        run: cd ./module3_task1 && ./setup.sh
+        run: cd module3_task1 && ./setup.sh
 
       - name: Validate Makefile execution make build command
         run: |
@@ -25,4 +25,3 @@ jobs:
           make stop
           make clean
         working-directory: module3_task1
-
