--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -1,23 +1,27 @@
 ---
+# Workflow name
 name: module3_task1
-
+# action who declench workflow
 "on":
   push:
+    branches:
+      - main
+  # programmate time of workflow execution
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
 
+# all action in this workflow
 jobs:
   builds:
-    name: update
+    # name of job
+    name: up-to-date installation system
+    # env of execution
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: installation Hugo with script
         run: cd module3_task1 && ./setup.sh
-
       - name: Validate Makefile execution make build command
         run: |
           make help
